욕설 필터링 구현